Combined both gen pages, linked more pages together

--- a/CSE368_Project/templates/home.html
+++ b/CSE368_Project/templates/home.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 
 {% block content %}
-     <h3>Please choose whether you want to generate quizzes or flashcards</h3>
-     <a href="{{ url_for('quiz') }}">Quizzes</a> 
-     <a href="{{ url_for('flash') }}">Flashcards</a> 
+     <a href="{{ url_for('quiz') }}">Create Quizzes and Flashcards!</a> 
      
 {% endblock %}
