--- a/CSE368_Project/templates/base.html
+++ b/CSE368_Project/templates/base.html
@@ -1,6 +1,12 @@
 <html>
-   <body>
-      <h2>BrainGain</h2>
+    <head>
+<link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/base.css') }}">
+</head>
+   <body class="base-container">
+      <div class="logo">BrainGain</div>
+      <div class="header">
+      {% block header %}{% endblock %}
+      </div>
       <div class="content">
         {% block content %} {% endblock %}
     </div>
