--- a/CSE368_Project/templates/quiz_gen.html
+++ b/CSE368_Project/templates/quiz_gen.html
@@ -18,14 +18,17 @@ Quiz and Flashcard generation
         <br><button>Create</button>
   </form>
 
-  <div class="list-container">
+</div>
+{% endblock %}
+
+
+<!-- Commented out code is not needed.-->
+<!-- <div class="list-container">
     <h4>Created Quizzes and Flashcards</h4>
     <div class="item-list">
-      <!-- Quiz items will link to quiz page -->
+       Quiz items will link to quiz page 
       <div class="item" onclick="location.href = '{{url_for('quiz_get',id=1)}}';">Quiz 1</div>
       <div class="item" onclick="location.href = '{{url_for('flash_get',id='sef')}}';">Flashcard 1</div>
 
     </div>
-  </div>
-</div>
-{% endblock %}
+  </div> -->
