--- a/CSE368_Project/templates/home.html
+++ b/CSE368_Project/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<a href="{{ url_for('quiz') }}">Create Quizzes and Flashcards!</a>
+<a href="{{ url_for('create_resource') }}">Create Quizzes and Flashcards</a>
 <br>
 <a href="{{ url_for('view_created') }}">View created Quizzes and Flashcards</a>
 
