--- a/CSE368_Project/static/styles/flashcard.css
+++ b/CSE368_Project/static/styles/flashcard.css
@@ -7,10 +7,13 @@
 }
 
 .card {
-  width: 250px;
-  height: 150px;
+  width: 40em;
+  height: 10em;
   perspective: 1000px;
   cursor: pointer;
+  display:none;
+  font-size: 30px;
+  line-height: 1.6;
 }
 
 .cardinner {
@@ -34,10 +37,11 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  /* padding: 20px; */
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   border-radius: 10px;
   background: #fefefe;
+  align-items: center;
+  display: flex;
  
 }
 
@@ -50,4 +54,23 @@
   margin-top:10px;
   margin-right:5px;
   margin-left:5px;
+  text-align: center;
+  width:100%;
+}
+
+.show{
+  display:block;
+}
+
+.cardbutton{
+  font-size: 40px;
+}
+
+#cardcounter{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  color: gainsboro;
+  margin-top: 20px;
 }
