Added prompting. Flashcards are generated dynamically and stored on db

--- a/CSE368_Project/templates/quiz_gen.html
+++ b/CSE368_Project/templates/quiz_gen.html
@@ -11,10 +11,12 @@ Quiz and Flashcard generation
   <!-- Get request here to load quizzes -->
   <form action="/file_path" method="post" enctype="multipart/form-data">
     <h4>To create quizzes and flashcards, upload a .png, .jpg, or .pdf below and press Create<h4>
-        <input type="text" placeholder="Enter the name of your quiz or flashcard"></input>
+        <input type="text" name = "mat_name" placeholder="Enter the name of your quiz or flashcard"></input><br>
+         <input class="notesbox" name="notestext" type="text" placeholder="Enter your notes here"></input>
         <input type="file" name="upload" accept="image/png,image/jpeg,application/pdf"></input><br>
         <input type="checkbox" name="quizupload">Quiz</input><input type="checkbox"
           name="flashcardupload">Flashcards</input>
+         
         <br><button>Create</button>
   </form>
 
