--- a/CSE368_Project/templates/home.html
+++ b/CSE368_Project/templates/home.html
@@ -3,11 +3,11 @@
 {% block content %}
 
 <body>
-    <button>
+    <button class="button1">
         <span><a href="{{ url_for('create_resource') }}">Create Quizzes and Flashcards</a></span>
     </button>
     <br>
-    <button>
+    <button class="button1">
         <span><a href="{{ url_for('view_created') }}">View created Quizzes and Flashcards</a></span>
     </button>
 </body>
