--- a/CSE368_Project/templates/view.html
+++ b/CSE368_Project/templates/view.html
@@ -1,13 +1,22 @@
 {% extends 'base.html' %}
 {% block header %}
+
 My Quizzes and Flashcards {{ID}}
+
 {% endblock %}
 
 {% block content %}
-<a href="{{ url_for('home') }}">Home</a>
 <br>
-<a href="{{ url_for('get_quizzes') }}">My Quizzes</a>
+<button class="button1">
+    <span><a href="{{ url_for('home') }}">Home</a></button></span>
+</button>
 <br>
-<a href="{{ url_for('get_flashcards') }}">My Flashcards</a>
+<button class="button1">
+    <span><a href="{{ url_for('get_quizzes') }}">My Quizzes</a></span>
+</button>
+<br>
+<button class="button1">
+    <span><a href="{{ url_for('get_flashcards') }}">My Flashcards</a></span>
+</button>
 
 {% endblock %}
