--- a/CSE368_Project/templates/uploaded_flashcards.html
+++ b/CSE368_Project/templates/uploaded_flashcards.html
@@ -8,9 +8,9 @@ My Flashcards
 
 {% block content %}
 <br>
-<button class="button1">
+<button class="button1" onclick="window.location.href='{{ url_for('home') }}'">
     <span>
-        <a href="{{ url_for('home') }}">Home</a>
+        Home
     </span>
 </button>
 
