--- a/CSE368_Project/templates/flash.html
+++ b/CSE368_Project/templates/flash.html
@@ -5,10 +5,14 @@ Flashcard {{ID}}
 {% endblock %}
 {% block content %}
 <br>
-<button class="button1"><span>
-        <a href="{{ url_for('view_created') }}">Return to quizzes and Flashcards</a></span>
+<button class="button1" onclick="window.location.href='{{ url_for('view_created') }}'">
+    <span>
+        Return to quizzes and Flashcards
+    </span>
 </button>
 <br>
+
+
 <div id="cardholder">
     <button class="button2" onclick="prev()" class="cardbutton">←</button>
     {% for card in flash_list %}
