--- a/CSE368_Project/templates/quiz_gen.html
+++ b/CSE368_Project/templates/quiz_gen.html
@@ -5,9 +5,9 @@ Quiz and Flashcard generation
 
 {% block content %}
 <br>
-<button class="button1">
+<button class="button1" onclick="window.location.href='{{ url_for('home') }}'">
   <span>
-    <a href="{{ url_for('home') }}">Home</a>
+    Home
   </span>
 </button>
 <br>
