UIUX Final Pass - QuizGen: added a box for better readability - QuizGen: added radio button to choose between raw text and pdf - QuizGen: made text notes input box larger so that it is readable while typing - QuizList: changed from basic links to buttons matching the FlashList page - QuizList, QuizRender: added back & home button rows for better navigability - General: made text shadow less strong for better readability - General: made all page titles black text with shadow, rather than some having light blue font - General: added other home & back buttons for navigation - Code Hygeine: moved some styles to base.css, also helps for reusing them

--- a/CSE368_Project/static/styles/base.css
+++ b/CSE368_Project/static/styles/base.css
@@ -253,3 +253,22 @@ a {
     width: 15px;
     height: 15px;
 }
+
+.shadowed-text {
+    font-weight: 900;
+    color: #071022;
+    text-shadow: 
+        0 0 2px rgba(255,255,255,0.2), 
+        0 0 6px rgba(255,255,255,0.5), 
+        0 0 12px rgba(255,255,255,1);
+}
+
+.btn-row { 
+    display: flex;
+    gap: 8px;
+    align-items: center; 
+}
+
+.left-offset {
+  padding-left: 32px;
+}
