--- a/CSE368_Project/templates/flash.html
+++ b/CSE368_Project/templates/flash.html
@@ -1,16 +1,19 @@
 {% extends 'base.html' %}
 {% block header %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/flashcard.css') }}">
-Flashcard {{ID}}
 {% endblock %}
 {% block content %}
-<br>
-<button class="button1" onclick="window.location.href='{{ url_for('view_created') }}'">
-    <span>
-        Return to quizzes and Flashcards
-    </span>
-</button>
-<br>
+<div class="left-offset">
+    <h1 class="shadowed-text">Viewing Flashcard Set {{ID}}</h1>
+
+    <br>
+    <button class="button1" onclick="window.location.href='{{ url_for('view_created') }}'">
+        <span>
+            Return to Your Quizzes and Flashcards
+        </span>
+    </button>
+    <br>
+</div>
 
 
 <div id="cardholder">
