--- a/CSE368_Project/templates/home.html
+++ b/CSE368_Project/templates/home.html
@@ -3,12 +3,15 @@
 {% block content %}
 
 <body>
-    <button class="button1" onclick="window.location.href='{{ url_for('create_resource') }}'">
-        <span>Create Quizzes and Flashcards</span>
-    </button>
-    <br>
-    <button class="button1" onclick="window.location.href='{{ url_for('view_created') }}'">
-        <span>View created Quizzes and Flashcards</span>
-    </button>
+    <div class="left-offset">
+        <h1 class="shadowed-text">Home</h1>
+        <button class="button1" onclick="window.location.href='{{ url_for('create_resource') }}'">
+            <span>Create Quizzes and Flashcards</span>
+        </button>
+        <br>
+        <button class="button1" onclick="window.location.href='{{ url_for('view_created') }}'">
+            <span>View Your Quizzes and Flashcards</span>
+        </button>
+    </div>
 </body>
 {% endblock %}
