--- a/CSE368_Project/templates/uploaded_flashcards.html
+++ b/CSE368_Project/templates/uploaded_flashcards.html
@@ -1,21 +1,23 @@
 {% extends 'base.html' %}
-{% block header %}
-
-My Flashcards
-
-{% endblock %}
-
 
 {% block content %}
-<br>
-<button class="button1" onclick="window.location.href='{{ url_for('home') }}'">
-    <span>
-        Home
-    </span>
-</button>
-
-<br>
-<div id="fc-list"></div>
-
+<div class="left-offset">
+    <h1 class="shadowed-text">My Flashcards</h1>
+    <br>
+    <div class="btn-row">
+        <button class="button1" onclick="window.location.href='{{ url_for('home') }}'">
+            <span>
+                Home
+            </span>
+        </button>
+        <button class="button1" onclick="window.location.href='{{ url_for('view_created') }}'">
+            <span>
+                Back
+            </span>
+        </button>
+    </div>
+    <br>
+    <div id="fc-list"></div>
+</div>
 <script src="{{ url_for('static', filename='fetchflashcards.js') }}" type="module"></script>
 {% endblock %}
