--- a/CSE368_Project/templates/view.html
+++ b/CSE368_Project/templates/view.html
@@ -1,29 +1,27 @@
 {% extends 'base.html' %}
-{% block header %}
-
-My Quizzes and Flashcards {{ID}}
-
-{% endblock %}
 
 {% block content %}
-<br>
-<button class="button1" onclick="window.location.href='{{ url_for('home') }}'">
-    <span>
-        Home
-    </span>
-</button>
-<br>
-<button class="button1" onclick="window.location.href='{{ url_for('get_quizzes') }}'">
-    <span>
-        My Quizzes
-    </span>
-</button>
-<br>
-<button class="button1" onclick="window.location.href='{{ url_for('get_flashcards') }}'">
-    <span>
-        My Flashcards
-    </span>
-</button>
+<div class="left-offset">
+    <h1 class="shadowed-text">My Quizzes and Flashcards {{ID}}</h1>
+    <br>
+    <button class="button1" onclick="window.location.href='{{ url_for('home') }}'">
+        <span>
+            Home
+        </span>
+    </button>
+    <br>
+    <button class="button1" onclick="window.location.href='{{ url_for('get_quizzes') }}'">
+        <span>
+            My Quizzes
+        </span>
+    </button>
+    <br>
+    <button class="button1" onclick="window.location.href='{{ url_for('get_flashcards') }}'">
+        <span>
+            My Flashcards
+        </span>
+    </button>
+</div>
 
 
 {% endblock %}
