--- a/CSE368_Project/static/styles/base.css
+++ b/CSE368_Project/static/styles/base.css
@@ -272,3 +272,66 @@ a {
 .left-offset {
   padding-left: 32px;
 }
+
+
+.submitButton{
+    margin:auto;
+    margin-top:2.2em;
+    align-items: center;
+    background-image: linear-gradient(144deg, #4dff0d, #42f3b1 50%, #00ddeb);
+    border: 0;
+    border-radius: 8px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #ffffff;
+    display: flex;
+    font-size: 25px;
+    justify-content: center;
+    line-height: 1em;
+    max-width: 100%;
+    min-width: 140px;
+    padding: 3px;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
+    transition: all 0.3s;
+    pointer-events: all;
+
+
+}
+
+.submitButton:active,
+.button1:hover {
+    outline: 0;
+}
+
+.submitButton span {
+    background-color: rgb(5, 6, 45);
+    padding: 16px 24px;
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    transition: 300ms;
+
+}
+
+.submitButton:hover span {
+    background: none;
+}
+
+.submitButton:active {
+    transform: scale(0.9);
+}
+
+#scoreContainer, #feedbackContainer{
+    display:none;
+    background-color: rgb(5, 6, 45);
+    padding: 16px 24px;
+    border-radius: 6px;
+    font-size:22px;
+    color:white;
+    margin-top: 2.1em
+}
