--- a/CSE368_Project/templates/quiz_render.html
+++ b/CSE368_Project/templates/quiz_render.html
@@ -99,7 +99,13 @@
     <button class="submitButton" onclick="submitQuiz('{{quiz_name}}')"><span>Submit for feedback</span></button>
     </div>
     <div id = "scoreContainer"></div>
-    <div id = "feedbackContainer"></div>
+    <div id = "feedbackContainer">
+      <div id ="strength"></div>
+      <br>
+      <div id ="weak"></div>
+      <br>
+      <div id ="rec"></div>
+    </div>
     <br>
     <div class="btn-row">
       <button class="button1" onclick="window.location.href='{{ url_for('home') }}'">
@@ -158,13 +164,17 @@
       }
 
       const results = await response.json();
-      const feedbackContainer = await document.getElementById("feedbackContainer");
+      const strength = await document.getElementById("strength");
+      const weak = await document.getElementById("weak");
+      const rec = await document.getElementById("rec");
       const scoreContainer = await document.getElementById("scoreContainer");
-      feedbackContainer.innerHTML = results["feedback"];
+      strength.innerHTML = "Strengths: "+results["strength"];
+      weak.innerHTML = "Weaknesses: "+results["weak"];
+      rec.innerHTML = "Recommendation: "+results["rec"];
       scoreContainer.innerHTML = "Score: "+ results["score"] +"/10";
 
       scoreContainer.style.display = "flex"
-      feedbackContainer.style.display="flex"
+      feedbackContainer.style.display="block"
       console.log(results)
     }
   </script>
