Changed instructions to pdf only

--- a/CSE368_Project/templates/quiz_gen.html
+++ b/CSE368_Project/templates/quiz_gen.html
@@ -27,7 +27,7 @@
 
     <!-- Get request here to load quizzes -->
     <form action="/file_path" method="post" enctype="multipart/form-data">
-      <div class="create-note">To create quizzes and flashcards, upload a .png, .jpg, or .pdf below and press Create<div>
+      <div class="create-note">To create quizzes and flashcards, put your notes in the text input box or upload a pdf below and press Create<div>
           <input type="text" name="mat_name" placeholder="Enter the name of your quiz or flashcard" style="width:75%" required></input><br>
           <div style="margin:12px 0;">
             <label>Input Type (switching will clear input!)</label><br>
